--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,33 @@
 /* #b9e0e7 */ 
 
 body {
-    background-color: #b9e0e7;
+    background-color: #82cbd7;
 }
 
 .nav-btn {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
+    background: linear-gradient(to bottom,#d32d2f 0%, #d32d2f 46%, #222 46%, #222 54%, #fff 54%, #fff 100%);
+    color: #FFCB05;
+    text-shadow: #3D7DCA 1.5px 1.5px 1px,
+                 #003A70 -1px -1px 1px;
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
+    border: 2px solid #222;
     transition: background 0.2s;    
+    position: relative;
+    overflow: hidden;
 }
+.nav-btn:hover {
+    color: #FFCB05;
+    box-shadow: inset 0 0 8px #5f9fec;
+}
+
+.pages{
+    display: flex;
+    justify-content: center;
+    align-items: top;
+    gap: 20px;
+}
+
